finishing header and site info with meadi

--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -1,12 +1,12 @@
+//This file contains mixins
 @mixin media($device) {
-    @if $device == mobile
-    {
-        @media screen and (max-width:375px)
-        {@content;}
+  @if $device == mobile {
+    @media screen and (max-width: 375px) {
+      @content;
     }
-    @else if $device == tablet
-    {
-        @media screen and (max-width:1024px)
-        {@content;}
+  } @else if $device == tablet {
+    @media screen and (max-width: 924px) {
+      @content;
     }
   }
+}
