--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,3 +1,4 @@
+// This is the main file that contect all scss files and to be shared with other scss modules 
 @import './variables';
 @import './mixins';
 @import './global';
