--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -1,16 +1,34 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
+//This file contains setup styles for generals and basics
 
-body{
-    font-size: 18px;
-    padding: 30px 10%;
-    margin: 0;
-    font-family: 'Poppins', sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap");
+
+* {
+  padding: 0;
+  margin: 0;
 }
 
-
-@include media(mobile)
-{
-    body{
-        padding: 0 ;
-    }
+body {
+  font-size: 18px;
+  // padding: 30px 10%;
+  padding: 0;
+  margin: 0;
+  font-family: "Poppins", sans-serif;
+  height: 100vh;
+  background: linear-gradient(
+    to bottom,
+    $white 0%,
+    $white 90%,
+    $neutral_White 50%,
+    $neutral_White 100%
+  );
 }
+
+input {
+  outline: none;
+}
+
+// @include media(mobile) {
+//   body {
+//     padding: 0;
+//   }
+// }
