finishing the project

--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -14,13 +14,13 @@ body {
   margin: 0;
   font-family: "Poppins", sans-serif;
   height: 100vh;
-  background: linear-gradient(
-    to bottom,
-    $white 0%,
-    $white 90%,
-    $neutral_White 50%,
-    $neutral_White 100%
-  );
+  // background: linear-gradient(
+  //   to bottom,
+  //   $white 0px,
+  //   $white 600px,
+  //   $neutral_White 600px,
+  //   $neutral_White 1440px
+  // );
 }
 
 input {
