--- a/src/components/from/Button/CustomButton.module.scss
+++ b/src/components/from/Button/CustomButton.module.scss
@@ -5,12 +5,11 @@
   font-weight: 700;
   background-color: $primary_Cyan;
   border: none;
-
   width: 100%;
   cursor: pointer;
   transition: all 1s;
   &:hover {
-    opacity: 0.7;
+    filter: brightness(1.2);
   }
 }
 
